fix(ui): wallet trans overflow temporar fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 body {
   margin: 0;
   z-index: -1;
+  overflow: hidden;
 }
